--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,7 @@ plugins:
 
 author:
   name   : "Stacey Mmbone"
-  avatar : "/assets/images/bio-photo.jpg"
+  avatar : "/assets/images/stacey.JPG"
   bio    : "Cybersecurity Enthusiast, Learning on how to secure digital world"
   links:
     - label: "LinkedIn"
