--- a/_config.yml
+++ b/_config.yml
@@ -58,7 +58,7 @@ plugins:
 author:
   name   : "Stacey Mmbone"
   avatar : "/assets/images/stacey.JPG"
-  bio    : "Cybersecurity Enthusiast, Learning on how to secure digital world"
+  bio    : "Information Security | Cybersecurity Enthusiast | Networking |Securing digital world"
   links:
     - label: "LinkedIn"
       icon: "fas fa-fw fa-link"
